add modified files

--- a/2_Raw_Data_Description.ipynb
+++ b/2_Raw_Data_Description.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "seventh-genesis",
+   "id": "dedicated-reasoning",
    "metadata": {},
    "source": [
     "# Raw Data Description"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "respiratory-visibility",
+   "id": "mounted-clothing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "progressive-alloy",
+   "id": "lightweight-pledge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wound-seeker",
+   "id": "included-synthesis",
    "metadata": {},
    "source": [
     "There are two datasets for the CrossFit Open 2019. Both datasets are provided by [kaggle](https://www.kaggle.com/jeanmidev/crossfit-games). The origin of the data is from the official Reebok CrossFit website.The dataset \"2019_opens_athletes.csv\" contains information of all the athletes participated in the Open 2019 and in the dataset \"2019_opens_scores.csv\" there are the results of the five competition workouts."
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accessory-adoption",
+   "id": "apart-convergence",
    "metadata": {},
    "source": [
     "The third dataset is created via webscraping from the official [CrossFit](https://games.crossfit.com) website and contains the benchmark statistics of athletes if provided."
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "herbal-arbitration",
+   "id": "warming-carter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "circular-story",
+   "id": "stock-annotation",
    "metadata": {},
    "source": [
     "---"
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "professional-screen",
+   "id": "expanded-triumph",
    "metadata": {},
    "source": [
     "## Athlete Dataset"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fleet-february",
+   "id": "treated-identity",
    "metadata": {},
    "source": [
     "### Dataset Information"
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "moved-sandwich",
+   "id": "english-gnome",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "affiliated-referral",
+   "id": "damaged-houston",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "third-large",
+   "id": "satisfied-forest",
    "metadata": {},
    "source": [
     "* 572,653 entries in the dataset\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excess-ceramic",
+   "id": "female-advertising",
    "metadata": {},
    "source": [
     "### Feature Explanation"
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "altered-nicholas",
+   "id": "seventh-treasury",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inclusive-growth",
+   "id": "atmospheric-sense",
    "metadata": {},
    "source": [
     "* competitorid: each athlete is identified by the unique id (also available in the other datasets)\n",
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "optical-michigan",
+   "id": "advanced-prerequisite",
    "metadata": {},
    "source": [
     "### Neglected Features"
@@ -409,19 +409,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "musical-diving",
+   "id": "south-microwave",
    "metadata": {},
    "source": [
     "* competitorname: contains the information of firstname and lastname\n",
     "* postcompstatus: almost entire data is missing\n",
     "* profilepics3key: just the name of a picture\n",
     "* countryoforiginname: contains same information as countryoforigincode\n",
-    "* dividionid: information of age-grouped divisions already in division"
+    "* dividionid: information of age-grouped divisions already in division\n",
+    "* affiliateid: contains no new information"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "extra-primary",
+   "id": "pleased-rotation",
    "metadata": {},
    "source": [
     "---"
@@ -429,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unnecessary-cheese",
+   "id": "inner-cleaning",
    "metadata": {},
    "source": [
     "## Score Dataset"
@@ -437,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "relevant-driving",
+   "id": "ahead-bandwidth",
    "metadata": {},
    "source": [
     "### Dataset Information"
@@ -446,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "incorporate-southwest",
+   "id": "narrative-honduras",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "unknown-bachelor",
+   "id": "aquatic-hours",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "peripheral-registration",
+   "id": "talented-lambda",
    "metadata": {},
    "source": [
     "* 572,653 athlete entries from athlete dataset with 5 competition workouts per athlete results in 2,863,265 scores observations\n",
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "neither-brooklyn",
+   "id": "therapeutic-spank",
    "metadata": {},
    "source": [
     "### Feature Explanation"
@@ -524,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "valid-administrator",
+   "id": "seasonal-trust",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "appropriate-comparative",
+   "id": "similar-judges",
    "metadata": {},
    "source": [
     "* affiliate: the official name of an athlete's affiliate\n",
@@ -702,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "static-landscape",
+   "id": "settled-pizza",
    "metadata": {},
    "source": [
     "### Neglected Features"
@@ -710,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "revolutionary-estimate",
+   "id": "therapeutic-danger",
    "metadata": {},
    "source": [
     "* judge: name of the judge is not interesting\n",
@@ -719,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "strange-server",
+   "id": "careful-cocktail",
    "metadata": {},
    "source": [
     "---"
@@ -727,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ancient-wagon",
+   "id": "earned-google",
    "metadata": {},
    "source": [
     "## Benchmark Statistics Dataset"
@@ -735,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "revolutionary-police",
+   "id": "destroyed-cincinnati",
    "metadata": {},
    "source": [
     "### Dataset Information"
@@ -744,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "internal-emergency",
+   "id": "moving-profit",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "emerging-rider",
+   "id": "industrial-encounter",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "charged-liability",
+   "id": "satisfied-punishment",
    "metadata": {},
    "source": [
     "* 338,271 entries in the dataset (for each given athlete in the database)\n",
@@ -820,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rational-resort",
+   "id": "recorded-scottish",
    "metadata": {},
    "source": [
     "### Feature Explanation"
@@ -829,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "protected-stomach",
+   "id": "metallic-account",
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pointed-pipeline",
+   "id": "published-reservoir",
    "metadata": {},
    "source": [
     "* fullname: first and surname of the athlete\n",
@@ -1070,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "three-egypt",
+   "id": "reported-share",
    "metadata": {},
    "source": [
     "### Neglected Features"
@@ -1078,7 +1079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "annoying-chair",
+   "id": "controversial-sixth",
    "metadata": {},
    "source": [
     "Since the benchmark statistics are interested only, the other features can be dropped. The competitor id is taken into account to assign each athlete."
@@ -1087,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lovely-coupon",
+   "id": "southern-investor",
    "metadata": {},
    "outputs": [],
    "source": []
