--- a/open_19_EDA_v03.ipynb
+++ b/open_19_EDA_v03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "documentary-danger",
+   "id": "popular-oakland",
    "metadata": {},
    "source": [
     "# Exploratory Data Analysis of CrossFit Open 2019"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "spare-sunglasses",
+   "id": "prescribed-venture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "traditional-diagnosis",
+   "id": "romantic-departure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "adaptive-effort",
+   "id": "fresh-laugh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "several-privilege",
+   "id": "emotional-obligation",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "anonymous-georgia",
+   "id": "local-armor",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "driving-rebecca",
+   "id": "composed-insight",
    "metadata": {},
    "source": [
     "---\n",
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "after-lithuania",
+   "id": "ecological-evanescence",
    "metadata": {},
    "source": [
     "### 19.1\n",
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "green-belle",
+   "id": "owned-german",
    "metadata": {},
    "source": [
     "### 19.2\n",
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "greenhouse-vacuum",
+   "id": "trying-supplement",
    "metadata": {},
    "source": [
     "### 19.3\n",
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "graphic-vaccine",
+   "id": "central-insurance",
    "metadata": {},
    "source": [
     "### 19.4\n",
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consistent-champion",
+   "id": "irish-pioneer",
    "metadata": {},
    "source": [
     "### 19.5\n",
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "behavioral-backup",
+   "id": "least-latin",
    "metadata": {},
    "source": [
     "---\n",
@@ -850,11 +850,11 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "quarterly-stand",
+   "id": "behind-maldives",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get the overallrank for top 1% of athletes\n",
+    "# get the overallrank and top 1% of athletes\n",
     "df_ta = df_19[(df_19['division']=='Men')|(df_19['division']=='Women')]\n",
     "ta_1 = int(0.01*df_ta.overallrank.max())"
    ]
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "olympic-invalid",
+   "id": "textile-symbol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "incredible-leeds",
+   "id": "defined-obligation",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "apparent-intent",
+   "id": "wicked-party",
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "respective-brick",
+   "id": "clinical-jonathan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "ignored-stretch",
+   "id": "global-utility",
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "charged-leone",
+   "id": "quarterly-partnership",
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "thrown-dividend",
+   "id": "elect-boundary",
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "substantial-ireland",
+   "id": "polished-memory",
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "gentle-green",
+   "id": "major-watts",
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "decreased-working",
+   "id": "ahead-colombia",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1113,7 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "heavy-recruitment",
+   "id": "organized-commitment",
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "supported-skating",
+   "id": "joined-boxing",
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "genetic-capital",
+   "id": "possible-channel",
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "freelance-nomination",
+   "id": "right-denmark",
    "metadata": {},
    "source": [
     "---\n",
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "certified-access",
+   "id": "close-government",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "agreed-receipt",
+   "id": "catholic-makeup",
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "alive-mitchell",
+   "id": "violent-counter",
    "metadata": {},
    "outputs": [
     {
@@ -2055,7 +2055,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "median-gilbert",
+   "id": "deadly-examination",
    "metadata": {},
    "outputs": [
     {
@@ -2092,7 +2092,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "instrumental-history",
+   "id": "retained-findings",
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2129,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "flying-shopping",
+   "id": "friendly-contributor",
    "metadata": {},
    "outputs": [
     {
@@ -2892,7 +2892,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "prescribed-cookbook",
+   "id": "occupational-sheriff",
    "metadata": {},
    "outputs": [
     {
@@ -2949,7 +2949,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "alike-commander",
+   "id": "corrected-surgeon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2975,7 +2975,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "floppy-japan",
+   "id": "sticky-sculpture",
    "metadata": {},
    "outputs": [
     {
@@ -3745,7 +3745,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "descending-comment",
+   "id": "demanding-mobility",
    "metadata": {},
    "outputs": [
     {
@@ -3802,7 +3802,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "secure-substitute",
+   "id": "acute-talent",
    "metadata": {},
    "outputs": [
     {
@@ -4572,7 +4572,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "prime-plastic",
+   "id": "noble-viking",
    "metadata": {},
    "outputs": [
     {
@@ -4628,7 +4628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "promising-silence",
+   "id": "rural-ordinary",
    "metadata": {},
    "source": [
     "---\n",
@@ -4638,14 +4638,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "framed-savage",
+   "id": "criminal-replication",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "directed-robert",
+   "id": "medium-commerce",
    "metadata": {},
    "source": [
     "---\n",
@@ -4655,7 +4655,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "existing-apparatus",
+   "id": "featured-thickness",
    "metadata": {},
    "outputs": [
     {
@@ -4682,7 +4682,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "natural-family",
+   "id": "suburban-solomon",
    "metadata": {},
    "outputs": [
     {
@@ -4712,7 +4712,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "bound-action",
+   "id": "resistant-bumper",
    "metadata": {},
    "outputs": [
     {
@@ -4739,7 +4739,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "abandoned-arbor",
+   "id": "linear-ballet",
    "metadata": {},
    "outputs": [
     {
@@ -4769,7 +4769,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "needed-ocean",
+   "id": "developing-programming",
    "metadata": {},
    "outputs": [
     {
@@ -4796,7 +4796,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "dental-roulette",
+   "id": "conventional-bangkok",
    "metadata": {},
    "outputs": [
     {
@@ -4826,7 +4826,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "contrary-western",
+   "id": "understood-implementation",
    "metadata": {},
    "outputs": [
     {
@@ -4852,7 +4852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eight-mambo",
+   "id": "existing-suspension",
    "metadata": {},
    "source": [
     "---\n",
@@ -4862,7 +4862,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "individual-biology",
+   "id": "excess-distributor",
    "metadata": {},
    "outputs": [
     {
@@ -4902,7 +4902,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "dying-thermal",
+   "id": "liable-economy",
    "metadata": {},
    "outputs": [
     {
@@ -4941,7 +4941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bearing-commitment",
+   "id": "certified-driver",
    "metadata": {},
    "source": [
     "---\n",
@@ -4951,7 +4951,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "immediate-casino",
+   "id": "advised-marker",
    "metadata": {},
    "outputs": [
     {
@@ -4976,7 +4976,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "spanish-princeton",
+   "id": "patient-invention",
    "metadata": {},
    "outputs": [
     {
@@ -5001,7 +5001,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "thrown-pixel",
+   "id": "sunset-webcam",
    "metadata": {},
    "outputs": [
     {
@@ -5026,7 +5026,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "owned-relevance",
+   "id": "split-wellington",
    "metadata": {},
    "outputs": [
     {
@@ -5051,7 +5051,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "random-atmosphere",
+   "id": "aware-procurement",
    "metadata": {},
    "outputs": [
     {
@@ -5075,7 +5075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "arctic-madison",
+   "id": "recognized-aaron",
    "metadata": {},
    "source": [
     "---\n",
@@ -5085,7 +5085,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "latin-formula",
+   "id": "continent-psychiatry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5096,7 +5096,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "potential-vegetation",
+   "id": "static-binary",
    "metadata": {},
    "outputs": [
     {
@@ -5119,7 +5119,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "young-johns",
+   "id": "charitable-hurricane",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5129,7 +5129,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "general-middle",
+   "id": "swedish-gather",
    "metadata": {},
    "outputs": [
     {
@@ -5150,7 +5150,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "entitled-theorem",
+   "id": "lucky-values",
    "metadata": {},
    "outputs": [
     {
@@ -5181,7 +5181,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "otherwise-mercury",
+   "id": "activated-dodge",
    "metadata": {},
    "outputs": [
     {
@@ -5219,7 +5219,7 @@
   {
    "cell_type": "code",
    "execution_count": 289,
-   "id": "individual-youth",
+   "id": "interpreted-legislation",
    "metadata": {},
    "outputs": [
     {
@@ -5249,7 +5249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wrapped-arbor",
+   "id": "sweet-walnut",
    "metadata": {},
    "source": [
     "---\n",
@@ -5259,7 +5259,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "martial-black",
+   "id": "future-shannon",
    "metadata": {},
    "outputs": [
     {
@@ -5298,7 +5298,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "described-paintball",
+   "id": "organizational-possible",
    "metadata": {},
    "outputs": [
     {
@@ -5329,7 +5329,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "respected-infrared",
+   "id": "governing-siemens",
    "metadata": {},
    "outputs": [
     {
@@ -5360,7 +5360,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "outdoor-mileage",
+   "id": "broad-diploma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5371,7 +5371,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "mechanical-crawford",
+   "id": "binary-burns",
    "metadata": {},
    "outputs": [
     {
@@ -5400,7 +5400,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "everyday-foster",
+   "id": "strange-contest",
    "metadata": {},
    "outputs": [
     {
@@ -5429,7 +5429,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "concrete-graduation",
+   "id": "arranged-guidance",
    "metadata": {},
    "outputs": [
     {
@@ -5458,7 +5458,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "remarkable-employment",
+   "id": "cubic-repair",
    "metadata": {},
    "outputs": [
     {
@@ -5487,7 +5487,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "first-holmes",
+   "id": "assigned-newton",
    "metadata": {},
    "outputs": [
     {
@@ -5516,7 +5516,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "wound-marathon",
+   "id": "olympic-carbon",
    "metadata": {},
    "outputs": [
     {
@@ -5545,7 +5545,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "confident-chapter",
+   "id": "sharing-system",
    "metadata": {},
    "outputs": [
     {
@@ -5574,7 +5574,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "conscious-decrease",
+   "id": "metric-wednesday",
    "metadata": {},
    "outputs": [
     {
@@ -5603,7 +5603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corrected-canon",
+   "id": "medical-expression",
    "metadata": {},
    "outputs": [],
    "source": []
