missing data analysis modified

--- a/5_Missing_Data_Analysis.ipynb
+++ b/5_Missing_Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "female-shark",
+   "id": "configured-career",
    "metadata": {},
    "source": [
     "# Missing Data Analysis of CrossFit Open 2019 Dataset"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demonstrated-organization",
+   "id": "hydraulic-placement",
    "metadata": {},
    "source": [
     "The full Open 2019 dataset with it's 72 features and over 338k observations contains a lot missing data. Since most machine learning algorithms can not handle missing data this notebook analyses the amount and structure of missing values. It concludes with recommended actions for the data preparation."
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "closed-pilot",
+   "id": "brilliant-drove",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "upset-piece",
+   "id": "female-replication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "czech-terrorism",
+   "id": "metallic-bulletin",
    "metadata": {},
    "source": [
     "# Data Overview"
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "signal-hydrogen",
+   "id": "intellectual-librarian",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "third-admission",
+   "id": "closing-journalist",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informal-longitude",
+   "id": "loved-chester",
    "metadata": {},
    "source": [
     "# Missing Value Analysis"
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "geological-vintage",
+   "id": "expensive-outside",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infectious-inclusion",
+   "id": "improved-validity",
    "metadata": {},
    "source": [
     "Missing values are present in:\n",
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "crucial-ebony",
+   "id": "intermediate-hostel",
    "metadata": {},
    "source": [
     "### Workout Results"
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "mighty-springfield",
+   "id": "automatic-projection",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "dirty-pierce",
+   "id": "enormous-senate",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "armed-cooperation",
+   "id": "antique-commander",
    "metadata": {},
    "source": [
     "A missing of workout results means that athletes did not participate. Just 65% competitors participated in all five workouts and would be left when dropping observations. The missing of workout results (wi_reps_total) has an influence on the performance in other workouts, including especially the overall ranking position. The better the overall rank the less missing values Thus, there is MNAR (Missing Not At Random) of missing participation.\n",
@@ -860,12 +860,13 @@
     "1. Since most athletes do not finish workouts within timecap, time features can be dropped.\n",
     "2. missing participation:\n",
     "* complete case analysis (drop missing observations)\n",
-    "* multiple imputation of missing workout values"
+    "* imputation to 0\n",
+    "* labeling new participation feature"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "voluntary-brief",
+   "id": "biological-sheet",
    "metadata": {},
    "source": [
     "### Body Measurements"
@@ -874,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "documented-relevance",
+   "id": "respiratory-space",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "green-frame",
+   "id": "average-rings",
    "metadata": {},
    "source": [
     "There are just 4 missing age values, these observation can be dropped. Very top athletes do reveal their height and weight data. Most missing values are randomly distributed, the is MAR (Missing At Random). Thus, the imputation of missing height and weight values is recommended, as well as dropping heights and weights."
@@ -905,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "desperate-meeting",
+   "id": "neither-rocket",
    "metadata": {},
    "source": [
     "### Benchmark Statistics"
@@ -914,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "constant-heather",
+   "id": "dress-radiation",
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "ancient-liability",
+   "id": "heard-short",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "drawn-brave",
+   "id": "recovered-farming",
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "contemporary-discharge",
+   "id": "radio-triumph",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "ruled-greeting",
+   "id": "atlantic-requirement",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "vocational-transsexual",
+   "id": "mediterranean-works",
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complex-third",
+   "id": "framed-disabled",
    "metadata": {},
    "source": [
     "The very most part of benchmark statistics is missing. Amongst these features the olympic lifts are most commonly present. Considering observations with minimum one lift entry, there is still 30% of all competitors left. Since the workout results and the ranking position are influenced by missing of benchmark data, the missing structure is MNAR.\n",
@@ -1056,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "twenty-siemens",
+   "id": "beautiful-least",
    "metadata": {},
    "outputs": [],
    "source": []
